--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/axios": "^0.14.0",
     "@types/graphql": "^14.5.0",
     "@types/jest": "^26.0.20",
+    "@types/js-cookie": "^2.2.6",
     "@types/lodash": "^4.14.168",
     "@types/node": "^12.20.4",
     "@types/react": "^17.0.2",
@@ -32,6 +33,7 @@
     "autosuggest-highlight": "^3.1.1",
     "date-fns": "^2.14.0",
     "graphql": "^15.5.0",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-apollo": "^3.1.5",
