--- a/package.json
+++ b/package.json
@@ -61,6 +61,9 @@
       "react-app/jest"
     ]
   },
+  "jestConfiguration": {
+    "collectCoverage": true
+  },
   "browserslist": {
     "production": [
       ">0.2%",
