--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^17.0.2",
     "@types/react-calendar": "^3.1.4",
     "@types/react-dom": "^17.0.1",
+    "@types/react-router-dom": "^5.1.7",
     "@types/react-test-renderer": "^17.0.1",
     "@types/redux": "^3.6.0",
     "apollo-boost": "^0.4.9",
