--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,24 @@
 REACT_APP_DEV_ENV
 REACT_APP_URI
+PORT
+HOST
+
+# MAP
+REACT_APP_MAP_MAPBOX
+
+# FIREBASE
+REACT_APP_FIREBASE_API_KEY
+REACT_APP_FIREBASE_AUTH_DOMAIN
+REACT_APP_FIREBASE_PROJECT_ID
+REACT_APP_FIREBASE_STORAGE_BUCKET
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID
+REACT_APP_FIREBASE_APPID
+REACT_APP_FIREBASE_MEASUREMENT_ID
+
+# CLOUDINARY
+REACT_APP_CLOUDINARY_KEY
+REACT_APP_CLOUDINARY_PRESET
+REACT_APP_CLOUDINARY_URL
+
+# GOOGLE ANALYTICS
+REACT_APP_GA_MEASUREMENT_ID
