Started changing App

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@turf/bbox": "^6.0.1",
+    "@types/js-cookie": "^2.2.6",
     "apexcharts": "^3.26.0",
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.21.1",
