Removed type errors

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ chrome-user-data
 *.swp
 *.swo
 .env
+.eslintcache
 
 packages/react-devtools-core/dist
 packages/react-devtools-extensions/chrome/build
