--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/js-cookie": "^2.2.6",
     "@types/react-calendar": "^3.1.4",
     "apexcharts": "^3.26.0",
+    "apollo3-cache-persist": "^0.9.1",
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.21.1",
     "axios-mock-adapter": "^1.19.0",
