Moved favicon to correct location

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Dive Schedule",
-  "name": "Dive scheduling system for Sandy Beach Dive Centre",
+  "name": "Dive scheduling system",
   "icons": [
     {
       "src": "favicon.ico",
