--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
     "@iconify/icons-eva": "^1.1.0",
     "@iconify/icons-ic": "^1.1.3",
     "@iconify/icons-vscode-icons": "^1.1.1",
-    "@iconify/react": "^1.1.4",
     "@material-ui/core": "^5.0.0-alpha.30",
     "@material-ui/icons": "^5.0.0-alpha.28",
     "@material-ui/lab": "^5.0.0-alpha.30",
@@ -138,6 +137,10 @@
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/eslint-parser": "^7.13.14",
+    "@iconify-icons/clarity": "^1.1.1",
+    "@iconify-icons/mdi": "^1.1.15",
+    "@iconify-icons/whh": "^1.1.0",
+    "@iconify/react": "^1.1.4",
     "@types/autosuggest-highlight": "^3.1.1",
     "@types/d3-array": "^2.9.0",
     "@types/d3-scale": "^3.2.2",
