Updated .env example

--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,24 @@
-REACT_APP_DEV_ENV
-REACT_APP_URI
-PORT
-HOST
+REACT_APP_DEV_ENV=something
+REACT_APP_URI=something
+PORT=something
+HOST=something
 
 # MAP
-REACT_APP_MAP_MAPBOX
+REACT_APP_MAP_MAPBOX=something
 
 # FIREBASE
-REACT_APP_FIREBASE_API_KEY
-REACT_APP_FIREBASE_AUTH_DOMAIN
-REACT_APP_FIREBASE_PROJECT_ID
-REACT_APP_FIREBASE_STORAGE_BUCKET
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID
-REACT_APP_FIREBASE_APPID
-REACT_APP_FIREBASE_MEASUREMENT_ID
+REACT_APP_FIREBASE_API_KEY=something
+REACT_APP_FIREBASE_AUTH_DOMAIN=something
+REACT_APP_FIREBASE_PROJECT_ID=something
+REACT_APP_FIREBASE_STORAGE_BUCKET=something
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=something
+REACT_APP_FIREBASE_APPID=something
+REACT_APP_FIREBASE_MEASUREMENT_ID=something
 
 # CLOUDINARY
-REACT_APP_CLOUDINARY_KEY
-REACT_APP_CLOUDINARY_PRESET
-REACT_APP_CLOUDINARY_URL
+REACT_APP_CLOUDINARY_KEY=something
+REACT_APP_CLOUDINARY_PRESET=something
+REACT_APP_CLOUDINARY_URL=something
 
 # GOOGLE ANALYTICS
-REACT_APP_GA_MEASUREMENT_ID
+REACT_APP_GA_MEASUREMENT_ID=something
